# s3-sync-lambda

./: .gitignore  CHANGELOG.md  README.md  dev.py  pyproject.toml
.github/workflows/: main.yml  manual-release.yml  test-infra.yml
.github/workflows/common/: action.yml
s3_sync_lambda/: aws  handler.py
s3_sync_lambda/testing/: conftest.py  test_integration.py  testing_helpers.py
test-infra/: README.md  main.tf  terraform.tfstate
