[tool.poetry]
name = "s3-sync-lambda"
version = "1.0.0a1"
description = "Sync an S3 bucket to another S3 bucket in AWS Lambda."
authors = ["Metabolize LLC"]
license = "Apache-2.0"
include = ["CHANGELOG.md"]
exclude = ["*/test_*.py"]
repository = "https://github.com/metabolize/missouri"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.10"
awscli = "1.40.12"
executor = "23.2"

[tool.poetry.dev-dependencies]
black = "25.1.0"
boto3 = "1.38.13"
boto3-stubs = {version = "1.38.13", extras = ["lambda", "s3"]}
click = "8.1.8"
flake8 = "7.2.0"
flake8-import-order = "0.18.2"
missouri = "0.3.0"
mypy = "1.15.0"
pytest = "8.3.5"
# pyyaml is broken with cython 3. https://github.com/yaml/pyyaml/issues/724
pyyaml = "!=6.0.0,!=5.4.0,!=5.4.1"
python-dotenv = "1.0.0"
werkit = "0.35.1"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true
